Fixed scrollbar issue with snap scroll

--- a/app/globals.css
+++ b/app/globals.css
@@ -24,6 +24,7 @@
   src: url('/font/MonumentExtended-Ultrabold.otf') format('opentype');
 }
 
+
 html,
 body {
   max-width: 100vw;
@@ -32,11 +33,15 @@ body {
   overflow-x: hidden;
   background-color: #0f0f1e;
   /* background-color: #f2f4f7; */
+
 }
 
 body {
   color: var(--foreground);
   background: var(--background);
+  height: 100vh;
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
   /* -webkit-font-smoothing: antialiased; */
   /* -moz-osx-font-smoothing: grayscale; */
 }
